// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button  button render disabled 1`] = `
<body>
  <div>
    <button
      class="leke-btn leke-btn-default leke-btn-middle"
      disabled=""
    />
  </div>
</body>
`;

exports[`Button  button render loading 1`] = `
<body>
  <div>
    <span>
       1111 
    </span>
  </div>
  <div>
    <button
      class="leke-btn leke-btn-default leke-btn-middle leke-btn-loading leke-btn-icon-only"
    >
      <div
        class="leke-btn-loading-icon"
      />
    </button>
  </div>
</body>
`;

exports[`Button  button render shape 1`] = `
<body>
  <div>
    <button
      class="leke-btn leke-btn-default leke-btn-circle leke-btn-middle"
    />
  </div>
</body>
`;

exports[`Button  button render size 1`] = `
<body>
  <div>
    <button
      class="leke-btn leke-btn-default leke-btn-large"
    />
  </div>
</body>
`;

exports[`Button  button render type 1`] = `
<body>
  <div>
    <button
      class="leke-btn leke-btn-main leke-btn-middle"
    />
  </div>
</body>
`;
